src/generatedParser.js
module.exports = (function() {
  /*
   * Generated by PEG.js 0.8.0.
   *
   * http://pegjs.majda.cz/
   */

  function peg$subclass(child, parent) {
    function ctor() { this.constructor = child; }
    ctor.prototype = parent.prototype;
    child.prototype = new ctor();
  }

  function SyntaxError(message, expected, found, offset, line, column) {
    this.message  = message;
    this.expected = expected;
    this.found    = found;
    this.offset   = offset;
    this.line     = line;
    this.column   = column;

    this.name     = "SyntaxError";
  }

  peg$subclass(SyntaxError, Error);

  function parse(input) {
    var options = arguments.length > 1 ? arguments[1] : {},

        peg$FAILED = {},

        peg$startRuleFunctions = { start: peg$parsestart },
        peg$startRuleFunction  = peg$parsestart,

        peg$c0 = peg$FAILED,
        peg$c1 = [],
        peg$c2 = null,
        peg$c3 = function(h, ll) {
              return {
                group: {
                  context: h,
                  lines: ll,
                  line: line()
                }
              }
            },
        peg$c4 = function(ll) {
            return ll.filter(function(l) { return l != null });
          },
        peg$c5 = ",",
        peg$c6 = { type: "literal", value: ",", description: "\",\"" },
        peg$c7 = function(c) { return c; },
        peg$c8 = function(c, cc) {
              cc.unshift(c);
              return flatten(cc);
            },
        peg$c9 = function(pp) { return pp; },
        peg$c10 = function(dd) { return { date: dd }; },
        peg$c11 = function(tt) { return { tags: tt }; },
        peg$c12 = function(cc) { return { currency: cc }; },
        peg$c13 = "@people",
        peg$c14 = { type: "literal", value: "@people", description: "\"@people\"" },
        peg$c15 = function(pl) { return { people: pl }; },
        peg$c16 = function(pm) { return { people_delta: pm }; },
        peg$c17 = "@date",
        peg$c18 = { type: "literal", value: "@date", description: "\"@date\"" },
        peg$c19 = "@tag",
        peg$c20 = { type: "literal", value: "@tag", description: "\"@tag\"" },
        peg$c21 = function(tl) { return tl; },
        peg$c22 = function(t) { return t; },
        peg$c23 = "@currency",
        peg$c24 = { type: "literal", value: "@currency", description: "\"@currency\"" },
        peg$c25 = function(p) {return p;},
        peg$c26 = function(pp) {
            return pp;
          },
        peg$c27 = function(m, n) { return { mod: m, name: n }; },
        peg$c28 = "+",
        peg$c29 = { type: "literal", value: "+", description: "\"+\"" },
        peg$c30 = "-",
        peg$c31 = { type: "literal", value: "-", description: "\"-\"" },
        peg$c32 = /^[a-zA-Z]/,
        peg$c33 = { type: "class", value: "[a-zA-Z]", description: "[a-zA-Z]" },
        peg$c34 = function(name) {
            return name.join("").toLowerCase();
          },
        peg$c35 = function(h) { return h; },
        peg$c36 = function() { return null; },
        peg$c37 = function(gh, ll) {
              return {group: { context: gh, lines:ll, line: line() }};
            },
        peg$c38 = function(d) {return d;},
        peg$c39 = ":",
        peg$c40 = { type: "literal", value: ":", description: "\":\"" },
        peg$c41 = function(d) { return d; },
        peg$c42 = "->",
        peg$c43 = { type: "literal", value: "->", description: "\"->\"" },
        peg$c44 = "<-",
        peg$c45 = { type: "literal", value: "<-", description: "\"<-\"" },
        peg$c46 = function(b) { return b; },
        peg$c47 = function(arrow, bb, opts) {
                return [bb, opts, arrow];
              },
        peg$c48 = function(date, desc, p, bs, c) {
              var o = {
                date : date,
                payers : p,
                options: [],
                line: line()
              };
              if (desc) {
                o.desc = desc.desc;
                o.tags = desc.tags;
              }
              if (bs) {
                o.beneficiaries = bs[0];
                o.options = bs[1];
                o.reversed = bs[2] !== "->";
              }
              if (c) {
                o.comment = c;
              }
              return o;
            },
        peg$c49 = "//",
        peg$c50 = { type: "literal", value: "//", description: "\"//\"" },
        peg$c51 = /^[^\n]/,
        peg$c52 = { type: "class", value: "[^\\n]", description: "[^\\n]" },
        peg$c53 = function(c) { return c.join("").trim(); },
        peg$c54 = /^[0-9]/,
        peg$c55 = { type: "class", value: "[0-9]", description: "[0-9]" },
        peg$c56 = function(year, month, day) {
              return new Date(year.join(""), month.join("") - 1, day.join(""));
          },
        peg$c57 = /^[^\/:@]/,
        peg$c58 = { type: "class", value: "[^\\/:@]", description: "[^\\/:@]" },
        peg$c59 = function(w) {
              var desc = w.join("");
              return {
                desc: desc,
                tags: desc.match(/#[^# ]+/g)
              };
          },
        peg$c60 = /^[a-zA-Z\-_'0-9"]/,
        peg$c61 = { type: "class", value: "[a-zA-Z\\-_'0-9\"]", description: "[a-zA-Z\\-_'0-9\"]" },
        peg$c62 = function(word) { return word.join(""); },
        peg$c63 = "#",
        peg$c64 = { type: "literal", value: "#", description: "\"#\"" },
        peg$c65 = function(t) { return t.join(""); },
        peg$c66 = function(p_n) { return p_n; },
        peg$c67 = function(p, others) {
              return [p].concat(others);
            },
        peg$c68 = function(n, e) { return {name : n, amount: e}; },
        peg$c69 = function(b_n) { return b_n; },
        peg$c70 = function(b, others) {
                return [b].concat(others);
            },
        peg$c71 = "",
        peg$c72 = function() { return []; },
        peg$c73 = function(n, m) {
                return {
                       name : n,
                       modifiers : m
                };
            },
        peg$c74 = function(n, a) {
                return {
                       name : n,
                       fixedAmount : a,
                };
            },
        peg$c75 = function(n) {
                return {
                    name : n
                };
            },
        peg$c76 = function(o, m) { return { offset: o, multiplier: m }; },
        peg$c77 = function(m, o) { return { offset: o, multiplier: m }; },
        peg$c78 = function(o) { return { offset: o }; },
        peg$c79 = function(m) { return { multiplier: m }; },
        peg$c80 = function(a) { return a; },
        peg$c81 = function(a) { return -a; },
        peg$c82 = "*",
        peg$c83 = { type: "literal", value: "*", description: "\"*\"" },
        peg$c84 = function(o) { return o; },
        peg$c85 = function(opts) { return opts; },
        peg$c86 = "...",
        peg$c87 = { type: "literal", value: "...", description: "\"...\"" },
        peg$c88 = function() { return { name: "group" }; },
        peg$c89 = "$",
        peg$c90 = { type: "literal", value: "$", description: "\"$\"" },
        peg$c91 = function() { return { name: "splitProportionally" }; },
        peg$c92 = function(res) { return res; },
        peg$c93 = function(t_n) { return parseFloat(t_n.join("")); },
        peg$c94 = function(t, others) {
              var sum = t;
              var length = others.length;
              for (var i = 0; i < length; i++) {
                  sum += others[i];
              }
              return sum;
            },
        peg$c95 = function(f_n) { return f_n; },
        peg$c96 = function(f, others) {
                var prod = f;
                var length = others.length;
                if (length > 0) {
                    for (var i = 0; i < length; i++) {
                        prod *= others[i];
                    }
                }
                return prod;
            },
        peg$c97 = "(",
        peg$c98 = { type: "literal", value: "(", description: "\"(\"" },
        peg$c99 = ")",
        peg$c100 = { type: "literal", value: ")", description: "\")\"" },
        peg$c101 = function(e) { return e; },
        peg$c102 = ".",
        peg$c103 = { type: "literal", value: ".", description: "\".\"" },
        peg$c104 = function(n) { return parseFloat(n.join("")); },
        peg$c105 = function(n) { return parseInt(n.join("")); },
        peg$c106 = " ",
        peg$c107 = { type: "literal", value: " ", description: "\" \"" },
        peg$c108 = "\t",
        peg$c109 = { type: "literal", value: "\t", description: "\"\\t\"" },
        peg$c110 = "\r\n",
        peg$c111 = { type: "literal", value: "\r\n", description: "\"\\r\\n\"" },
        peg$c112 = "\n",
        peg$c113 = { type: "literal", value: "\n", description: "\"\\n\"" },
        peg$c114 = "\r",
        peg$c115 = { type: "literal", value: "\r", description: "\"\\r\"" },
        peg$c116 = function() { return false },
        peg$c117 = void 0,
        peg$c118 = { type: "any", description: "any character" },
        peg$c119 = function() { return true },
        peg$c120 = function(i) { return i.join("") === indent; },
        peg$c121 = function(i) { return i.length > indent.length; },
        peg$c122 = function(i) { indentStack.push(indent); indent = i.join(""); pos = offset; },
        peg$c123 = function() { indent = indentStack.pop(); },

        peg$currPos          = 0,
        peg$reportedPos      = 0,
        peg$cachedPos        = 0,
        peg$cachedPosDetails = { line: 1, column: 1, seenCR: false },
        peg$maxFailPos       = 0,
        peg$maxFailExpected  = [],
        peg$silentFails      = 0,

        peg$result;

    if ("startRule" in options) {
      if (!(options.startRule in peg$startRuleFunctions)) {
        throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
      }

      peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
    }

    function text() {
      return input.substring(peg$reportedPos, peg$currPos);
    }

    function offset() {
      return peg$reportedPos;
    }

    function line() {
      return peg$computePosDetails(peg$reportedPos).line;
    }

    function column() {
      return peg$computePosDetails(peg$reportedPos).column;
    }

    function expected(description) {
      throw peg$buildException(
        null,
        [{ type: "other", description: description }],
        peg$reportedPos
      );
    }

    function error(message) {
      throw peg$buildException(message, null, peg$reportedPos);
    }

    function peg$computePosDetails(pos) {
      function advance(details, startPos, endPos) {
        var p, ch;

        for (p = startPos; p < endPos; p++) {
          ch = input.charAt(p);
          if (ch === "\n") {
            if (!details.seenCR) { details.line++; }
            details.column = 1;
            details.seenCR = false;
          } else if (ch === "\r" || ch === "\u2028" || ch === "\u2029") {
            details.line++;
            details.column = 1;
            details.seenCR = true;
          } else {
            details.column++;
            details.seenCR = false;
          }
        }
      }

      if (peg$cachedPos !== pos) {
        if (peg$cachedPos > pos) {
          peg$cachedPos = 0;
          peg$cachedPosDetails = { line: 1, column: 1, seenCR: false };
        }
        advance(peg$cachedPosDetails, peg$cachedPos, pos);
        peg$cachedPos = pos;
      }

      return peg$cachedPosDetails;
    }

    function peg$fail(expected) {
      if (peg$currPos < peg$maxFailPos) { return; }

      if (peg$currPos > peg$maxFailPos) {
        peg$maxFailPos = peg$currPos;
        peg$maxFailExpected = [];
      }

      peg$maxFailExpected.push(expected);
    }

    function peg$buildException(message, expected, pos) {
      function cleanupExpected(expected) {
        var i = 1;

        expected.sort(function(a, b) {
          if (a.description < b.description) {
            return -1;
          } else if (a.description > b.description) {
            return 1;
          } else {
            return 0;
          }
        });

        while (i < expected.length) {
          if (expected[i - 1] === expected[i]) {
            expected.splice(i, 1);
          } else {
            i++;
          }
        }
      }

      function buildMessage(expected, found) {
        function stringEscape(s) {
          function hex(ch) { return ch.charCodeAt(0).toString(16).toUpperCase(); }

          return s
            .replace(/\\/g,   '\\\\')
            .replace(/"/g,    '\\"')
            .replace(/\x08/g, '\\b')
            .replace(/\t/g,   '\\t')
            .replace(/\n/g,   '\\n')
            .replace(/\f/g,   '\\f')
            .replace(/\r/g,   '\\r')
            .replace(/[\x00-\x07\x0B\x0E\x0F]/g, function(ch) { return '\\x0' + hex(ch); })
            .replace(/[\x10-\x1F\x80-\xFF]/g,    function(ch) { return '\\x'  + hex(ch); })
            .replace(/[\u0180-\u0FFF]/g,         function(ch) { return '\\u0' + hex(ch); })
            .replace(/[\u1080-\uFFFF]/g,         function(ch) { return '\\u'  + hex(ch); });
        }

        var expectedDescs = new Array(expected.length),
            expectedDesc, foundDesc, i;

        for (i = 0; i < expected.length; i++) {
          expectedDescs[i] = expected[i].description;
        }

        expectedDesc = expected.length > 1
          ? expectedDescs.slice(0, -1).join(", ")
              + " or "
              + expectedDescs[expected.length - 1]
          : expectedDescs[0];

        foundDesc = found ? "\"" + stringEscape(found) + "\"" : "end of input";

        return "Expected " + expectedDesc + " but " + foundDesc + " found.";
      }

      var posDetails = peg$computePosDetails(pos),
          found      = pos < input.length ? input.charAt(pos) : null;

      if (expected !== null) {
        cleanupExpected(expected);
      }

      return new SyntaxError(
        message !== null ? message : buildMessage(expected, found),
        expected,
        found,
        pos,
        posDetails.line,
        posDetails.column
      );
    }

    function peg$parsestart() {
      var s0, s1, s2, s3;

      s0 = peg$parseheader_line();
      if (s0 === peg$FAILED) {
        s0 = peg$currPos;
        s1 = peg$parsegroup_header();
        if (s1 !== peg$FAILED) {
          s2 = [];
          s3 = peg$parseEOL();
          if (s3 !== peg$FAILED) {
            while (s3 !== peg$FAILED) {
              s2.push(s3);
              s3 = peg$parseEOL();
            }
          } else {
            s2 = peg$c0;
          }
          if (s2 !== peg$FAILED) {
            s3 = peg$parselines();
            if (s3 === peg$FAILED) {
              s3 = peg$c2;
            }
            if (s3 !== peg$FAILED) {
              peg$reportedPos = s0;
              s1 = peg$c3(s1, s3);
              s0 = s1;
            } else {
              peg$currPos = s0;
              s0 = peg$c0;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$c0;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$c0;
        }
      }

      return s0;
    }

    function peg$parselines() {
      var s0, s1, s2;

      s0 = peg$currPos;
      s1 = [];
      s2 = peg$parseline();
      if (s2 !== peg$FAILED) {
        while (s2 !== peg$FAILED) {
          s1.push(s2);
          s2 = peg$parseline();
        }
      } else {
        s1 = peg$c0;
      }
      if (s1 !== peg$FAILED) {
        peg$reportedPos = s0;
        s1 = peg$c4(s1);
      }
      s0 = s1;

      return s0;
    }

    function peg$parsegroup_header() {
      var s0, s1, s2, s3, s4, s5, s6, s7;

      s0 = peg$currPos;
      s1 = peg$parsecommand();
      if (s1 !== peg$FAILED) {
        s2 = peg$parse_();
        if (s2 === peg$FAILED) {
          s2 = peg$c2;
        }
        if (s2 !== peg$FAILED) {
          s3 = [];
          s4 = peg$currPos;
          if (input.charCodeAt(peg$currPos) === 44) {
            s5 = peg$c5;
            peg$currPos++;
          } else {
            s5 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c6); }
          }
          if (s5 !== peg$FAILED) {
            s6 = peg$parse_();
            if (s6 === peg$FAILED) {
              s6 = peg$c2;
            }
            if (s6 !== peg$FAILED) {
              s7 = peg$parsecommand();
              if (s7 !== peg$FAILED) {
                peg$reportedPos = s4;
                s5 = peg$c7(s7);
                s4 = s5;
              } else {
                peg$currPos = s4;
                s4 = peg$c0;
              }
            } else {
              peg$currPos = s4;
              s4 = peg$c0;
            }
          } else {
            peg$currPos = s4;
            s4 = peg$c0;
          }
          while (s4 !== peg$FAILED) {
            s3.push(s4);
            s4 = peg$currPos;
            if (input.charCodeAt(peg$currPos) === 44) {
              s5 = peg$c5;
              peg$currPos++;
            } else {
              s5 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c6); }
            }
            if (s5 !== peg$FAILED) {
              s6 = peg$parse_();
              if (s6 === peg$FAILED) {
                s6 = peg$c2;
              }
              if (s6 !== peg$FAILED) {
                s7 = peg$parsecommand();
                if (s7 !== peg$FAILED) {
                  peg$reportedPos = s4;
                  s5 = peg$c7(s7);
                  s4 = s5;
                } else {
                  peg$currPos = s4;
                  s4 = peg$c0;
                }
              } else {
                peg$currPos = s4;
                s4 = peg$c0;
              }
            } else {
              peg$currPos = s4;
              s4 = peg$c0;
            }
          }
          if (s3 !== peg$FAILED) {
            peg$reportedPos = s0;
            s1 = peg$c8(s1, s3);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$c0;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$c0;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c0;
      }

      return s0;
    }

    function peg$parsecommand() {
      var s0, s1;

      s0 = peg$currPos;
      s1 = peg$parsepeople_command();
      if (s1 !== peg$FAILED) {
        peg$reportedPos = s0;
        s1 = peg$c9(s1);
      }
      s0 = s1;
      if (s0 === peg$FAILED) {
        s0 = peg$currPos;
        s1 = peg$parsedate_command();
        if (s1 !== peg$FAILED) {
          peg$reportedPos = s0;
          s1 = peg$c10(s1);
        }
        s0 = s1;
        if (s0 === peg$FAILED) {
          s0 = peg$currPos;
          s1 = peg$parsetag_command();
          if (s1 !== peg$FAILED) {
            peg$reportedPos = s0;
            s1 = peg$c11(s1);
          }
          s0 = s1;
          if (s0 === peg$FAILED) {
            s0 = peg$currPos;
            s1 = peg$parsecurrency_command();
            if (s1 !== peg$FAILED) {
              peg$reportedPos = s0;
              s1 = peg$c12(s1);
            }
            s0 = s1;
          }
        }
      }

      return s0;
    }

    function peg$parsepeople_command() {
      var s0, s1, s2;

      s0 = peg$currPos;
      if (input.substr(peg$currPos, 7) === peg$c13) {
        s1 = peg$c13;
        peg$currPos += 7;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c14); }
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parsepeople_list();
        if (s2 !== peg$FAILED) {
          peg$reportedPos = s0;
          s1 = peg$c15(s2);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$c0;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c0;
      }
      if (s0 === peg$FAILED) {
        s0 = peg$currPos;
        if (input.substr(peg$currPos, 7) === peg$c13) {
          s1 = peg$c13;
          peg$currPos += 7;
        } else {
          s1 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c14); }
        }
        if (s1 !== peg$FAILED) {
          s2 = peg$parsepeople_modifiers();
          if (s2 !== peg$FAILED) {
            peg$reportedPos = s0;
            s1 = peg$c16(s2);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$c0;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$c0;
        }
      }

      return s0;
    }

    function peg$parsedate_command() {
      var s0, s1, s2, s3;

      s0 = peg$currPos;
      if (input.substr(peg$currPos, 5) === peg$c17) {
        s1 = peg$c17;
        peg$currPos += 5;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c18); }
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parse_();
        if (s2 !== peg$FAILED) {
          s3 = peg$parsedate();
          if (s3 !== peg$FAILED) {
            s1 = [s1, s2, s3];
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$c0;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$c0;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c0;
      }

      return s0;
    }

    function peg$parsetag_command() {
      var s0, s1, s2;

      s0 = peg$currPos;
      if (input.substr(peg$currPos, 4) === peg$c19) {
        s1 = peg$c19;
        peg$currPos += 4;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c20); }
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parsetag_list();
        if (s2 !== peg$FAILED) {
          peg$reportedPos = s0;
          s1 = peg$c21(s2);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$c0;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c0;
      }

      return s0;
    }

    function peg$parsetag_list() {
      var s0, s1, s2, s3;

      s0 = [];
      s1 = peg$currPos;
      s2 = peg$parse_();
      if (s2 !== peg$FAILED) {
        s3 = peg$parsetag();
        if (s3 !== peg$FAILED) {
          peg$reportedPos = s1;
          s2 = peg$c22(s3);
          s1 = s2;
        } else {
          peg$currPos = s1;
          s1 = peg$c0;
        }
      } else {
        peg$currPos = s1;
        s1 = peg$c0;
      }
      if (s1 !== peg$FAILED) {
        while (s1 !== peg$FAILED) {
          s0.push(s1);
          s1 = peg$currPos;
          s2 = peg$parse_();
          if (s2 !== peg$FAILED) {
            s3 = peg$parsetag();
            if (s3 !== peg$FAILED) {
              peg$reportedPos = s1;
              s2 = peg$c22(s3);
              s1 = s2;
            } else {
              peg$currPos = s1;
              s1 = peg$c0;
            }
          } else {
            peg$currPos = s1;
            s1 = peg$c0;
          }
        }
      } else {
        s0 = peg$c0;
      }

      return s0;
    }

    function peg$parsecurrency_command() {
      var s0, s1, s2, s3;

      s0 = peg$currPos;
      if (input.substr(peg$currPos, 9) === peg$c23) {
        s1 = peg$c23;
        peg$currPos += 9;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c24); }
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parse_();
        if (s2 !== peg$FAILED) {
          s3 = peg$parsenumber();
          if (s3 !== peg$FAILED) {
            s1 = [s1, s2, s3];
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$c0;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$c0;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c0;
      }

      return s0;
    }

    function peg$parsepeople_list() {
      var s0, s1, s2, s3, s4;

      s0 = peg$currPos;
      s1 = [];
      s2 = peg$currPos;
      s3 = peg$parse_();
      if (s3 !== peg$FAILED) {
        s4 = peg$parsename();
        if (s4 !== peg$FAILED) {
          peg$reportedPos = s2;
          s3 = peg$c25(s4);
          s2 = s3;
        } else {
          peg$currPos = s2;
          s2 = peg$c0;
        }
      } else {
        peg$currPos = s2;
        s2 = peg$c0;
      }
      if (s2 !== peg$FAILED) {
        while (s2 !== peg$FAILED) {
          s1.push(s2);
          s2 = peg$currPos;
          s3 = peg$parse_();
          if (s3 !== peg$FAILED) {
            s4 = peg$parsename();
            if (s4 !== peg$FAILED) {
              peg$reportedPos = s2;
              s3 = peg$c25(s4);
              s2 = s3;
            } else {
              peg$currPos = s2;
              s2 = peg$c0;
            }
          } else {
            peg$currPos = s2;
            s2 = peg$c0;
          }
        }
      } else {
        s1 = peg$c0;
      }
      if (s1 !== peg$FAILED) {
        peg$reportedPos = s0;
        s1 = peg$c26(s1);
      }
      s0 = s1;

      return s0;
    }

    function peg$parsepeople_modifiers() {
      var s0, s1, s2, s3, s4;

      s0 = [];
      s1 = peg$currPos;
      s2 = peg$parse_();
      if (s2 !== peg$FAILED) {
        s3 = peg$parsemod();
        if (s3 !== peg$FAILED) {
          s4 = peg$parsename();
          if (s4 !== peg$FAILED) {
            peg$reportedPos = s1;
            s2 = peg$c27(s3, s4);
            s1 = s2;
          } else {
            peg$currPos = s1;
            s1 = peg$c0;
          }
        } else {
          peg$currPos = s1;
          s1 = peg$c0;
        }
      } else {
        peg$currPos = s1;
        s1 = peg$c0;
      }
      if (s1 !== peg$FAILED) {
        while (s1 !== peg$FAILED) {
          s0.push(s1);
          s1 = peg$currPos;
          s2 = peg$parse_();
          if (s2 !== peg$FAILED) {
            s3 = peg$parsemod();
            if (s3 !== peg$FAILED) {
              s4 = peg$parsename();
              if (s4 !== peg$FAILED) {
                peg$reportedPos = s1;
                s2 = peg$c27(s3, s4);
                s1 = s2;
              } else {
                peg$currPos = s1;
                s1 = peg$c0;
              }
            } else {
              peg$currPos = s1;
              s1 = peg$c0;
            }
          } else {
            peg$currPos = s1;
            s1 = peg$c0;
          }
        }
      } else {
        s0 = peg$c0;
      }

      return s0;
    }

    function peg$parsemod() {
      var s0;

      if (input.charCodeAt(peg$currPos) === 43) {
        s0 = peg$c28;
        peg$currPos++;
      } else {
        s0 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c29); }
      }
      if (s0 === peg$FAILED) {
        if (input.charCodeAt(peg$currPos) === 45) {
          s0 = peg$c30;
          peg$currPos++;
        } else {
          s0 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c31); }
        }
      }

      return s0;
    }

    function peg$parsename() {
      var s0, s1, s2;

      s0 = peg$currPos;
      s1 = [];
      if (peg$c32.test(input.charAt(peg$currPos))) {
        s2 = input.charAt(peg$currPos);
        peg$currPos++;
      } else {
        s2 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c33); }
      }
      if (s2 !== peg$FAILED) {
        while (s2 !== peg$FAILED) {
          s1.push(s2);
          if (peg$c32.test(input.charAt(peg$currPos))) {
            s2 = input.charAt(peg$currPos);
            peg$currPos++;
          } else {
            s2 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c33); }
          }
        }
      } else {
        s1 = peg$c0;
      }
      if (s1 !== peg$FAILED) {
        peg$reportedPos = s0;
        s1 = peg$c34(s1);
      }
      s0 = s1;

      return s0;
    }

    function peg$parseline() {
      var s0, s1, s2, s3;
